# Zugzwang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  precompute.py
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  main.cpp  movegen.cpp  pch.h  types.h  uci.cpp  uci.h
test/: perft.sh
